# chimera-lang

./: .gitignore  flake.nix  justfile  lsp.py  pyproject.toml
.helix/: languages.toml
examples/: hello.chi  hello.wt  list.chi  oper.wt
lsp/: __main__.py  parser.py
queries/: highlights.scm
