[project]
name = "chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "pygls>=2.0.0a2",
    "sortedcontainers>=2.4.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-walktime",
]

[tool.uv.sources]
tree-sitter-walktime = { path = "tree-sitter-walktime", editable = true }
